<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('news_post_tag', function (Blueprint $table) {
            $table->foreignId('news_post_id')->constrained()->cascadeOnDelete();
            $table->foreignId('news_tag_id')->constrained()->cascadeOnDelete();
            $table->primary(['news_post_id', 'news_tag_id']);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('news_post_tag');
    }
};
